feat(gpu): refactor GpuTensor and CpuTensor to support multiple device types and add Silicon library integration (MUST BE FIXED)